Modernize deprecated JDK API usages
Boxed-type constructors (Long, Double, Float, Boolean) replaced with their
.valueOf()/parseX() equivalents; Class.newInstance() replaced with
getDeclaredConstructor().newInstance(), adding NoSuchMethodException and
InvocationTargetException handling where the surrounding catch blocks
weren't already broad enough to cover them; Thread.getId() replaced with
Thread.threadId(); new Locale(String) replaced with Locale.of(String).

Also removed 4 identical finalize() overrides (AbstractScanner,
WorkingFileRepositoryCleaner, CaptureNowProlongingService,
WorkspaceCleaner) that called shutdown() on a Quartz scheduler as a
"just in case" backstop. finalize() is deprecated for removal and was
never a reliable backstop to begin with, since the JVM doesn't guarantee
it runs at all, promptly, or before process exit. Removing it is safe
here because every real usage already has deterministic cleanup wired
into an OSGi @Deactivate lifecycle method instead - verified against the
actual generated OSGi component descriptors, not just by reading the
source, since annotations only take effect on the class that declares
them.

That verification uncovered a genuine latent bug: SpeechToTextWorkflowSchedulerQuartz
(one of four concrete subclasses of AbstractScanner) was missing its
@Deactivate override entirely - it had an unused import for the
annotation but never added the method - so finalize() was actually the
only thing ever attempting to shut down its scheduler, unreliably. Fixed
by adding the missing override so it matches its sibling subclasses,
which makes the finalize() removal on AbstractScanner safe for all of
its subclasses, not just three of them.

new URL(String) is deferred to its own change, since several call sites
only catch MalformedURLException and would need additional handling for
the IllegalArgumentException that URI.create(...).toURL() can throw for
malformed input where the old constructor wouldn't have.

Co-Authored-By: Claude S